"added link to site-1"

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 			<div class="row sites">
 				<div class="col-4">
 					<div class="site-1">
-						<a href="#"><img src="img/site-1.jpg" height="198" width="368" alt=""></a>
+						<a href="/sites/dropp/index.html"><img src="img/site-1.jpg" height="198" width="368" alt=""></a>
 					</div>
 				</div>
 				<div class="col-4">
