--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
 </head>
 <body>
 	<!---HEADER-->
+	<div class="wrapper">
 	<div class="header">
-		<div class="wrapper">
+		<div class="container">
 			<div class="row">
 				<div class="col-3">
 					<div class="logo">
@@ -40,7 +41,7 @@
 	</div>
 	<!---HOME-->
 	<div class="home">
-		<div class="wrapper">
+		<div class="container">
 			<div class="row">
 				<div class="col-12 clearfix">
 					<div class="home-title">
@@ -54,9 +55,11 @@
 	<!--ABOUT-->
 	<div class="about">
 		<div class="section-title">
-			<h2 class="tagstyle" >about me</h2>
+			<div class="container">
+				<h2 class="tagstyle" >about me</h2>
+			</div>
 		</div>
-		<div class="wrapper">
+		<div class="container">
 			<div class="row">
 				<div class="col-6">
 					<div class="myphoto">
@@ -92,41 +95,43 @@
 	</div>
 	<!--PORTFOLIO-->
 	<div class="portfolio">
-		<div class="section-title">
-			<h2 class="tagstyle">portfolio</h2>
-		</div>
-		<div class="wrapper">
+			<div class="section-title">
+				<div class="container">
+					<h2 class="tagstyle">portfolio</h2>
+				</div>
+			</div>
+		<div class="container">
 			<div class="row sites">
 				<div class="col-4">
-					<div class="site-1">
-						<a href="/sites/dropp/index.html"><img src="img/site-1.jpg" height="198" width="368" alt=""></a>
+					<div class="site">
+						<a href="/sites/dropp/index.html"><img src="img/site-1.jpg"  alt=""></a>
 					</div>
 				</div>
 				<div class="col-4">
 					<div class="site">
-						<a href="#"  class="tagstyle">place for my work</a>
+						<a href="#"  class="tagstyle empty">place for my work</a>
 					</div>
 				</div>
 				<div class="col-4">
 					<div class="site">
-						<a href="#"  class="tagstyle">place for my work</a>
+						<a href="#"  class="tagstyle empty">place for my work</a>
 					</div>
 				</div>
 			</div>
 			<div class="row sites">
 				<div class="col-4">
 					<div class="site">
-						<a href="#" class="tagstyle">place for my work</a>
+						<a href="#" class="tagstyle empty">place for my work</a>
 					</div>
 				</div>
 				<div class="col-4">
 					<div class="site">
-						<a href="#"  class="tagstyle">place for my work</a>
+						<a href="#"  class="tagstyle empty">place for my work</a>
 					</div>
 				</div>
 				<div class="col-4">
 					<div class="site">
-						<a href="#"  class="tagstyle">place for my work</a>
+						<a href="#"  class="tagstyle empty">place for my work</a>
 					</div>
 				</div>
 			</div>
@@ -135,9 +140,11 @@
 	<!--CONTATCS-->
 	<div class="contacts">
 		<div class="section-title">
-			<h2 class="tagstyle">contacts</h2>
+			<div class="container">
+				<h2 class="tagstyle">contacts</h2>
+			</div>
 		</div>
-		<div class="wrapper">
+		<div class="container">
 			<div class="row">
 				<div class="col-4">
 					<div class="contacts-title">
@@ -151,6 +158,7 @@
 				</div>
 			</div>
 		</div>
+	</div>
 	</div>
 </body>
 </html>
