work with adaptive mediaqueries

--- a/index.html
+++ b/index.html
@@ -30,17 +30,17 @@
 				</div>
 				<div class="col-9">
 					<ul class="navigation">
-						<li><a class="tagstyle" href="#">home</a></li>
-						<li><a class="tagstyle" href="#">about me</a></li>
-						<li><a class="tagstyle" href="#">portfolio</a></li>
-						<li><a class="tagstyle" href="#">contacts</a></li>
+						<li><a class="tagstyle" href="#home">home</a></li>
+						<li><a class="tagstyle" href="#about">about me</a></li>
+						<li><a class="tagstyle" href="#portfolio">portfolio</a></li>
+						<li><a class="tagstyle" href="#contacts">contacts</a></li>
 					</ul>
 				</div>
 			</div>
 		</div>
 	</div>
 	<!---HOME-->
-	<div class="home">
+	<div class="home" id="home">
 		<div class="container">
 			<div class="row">
 				<div class="col-12 clearfix">
@@ -53,7 +53,7 @@
 		</div>
 	</div>
 	<!--ABOUT-->
-	<div class="about">
+	<div class="about" id="about">
 		<div class="section-title">
 			<div class="container">
 				<h2 class="tagstyle" >about me</h2>
@@ -94,7 +94,7 @@
 		</div>
 	</div>
 	<!--PORTFOLIO-->
-	<div class="portfolio">
+	<div class="portfolio" id="portfolio">
 			<div class="section-title">
 				<div class="container">
 					<h2 class="tagstyle">portfolio</h2>
@@ -138,7 +138,7 @@
 		</div>
 	</div>
 	<!--CONTATCS-->
-	<div class="contacts">
+	<div class="contacts" id="contacts">
 		<div class="section-title">
 			<div class="container">
 				<h2 class="tagstyle">contacts</h2>
