make adaptive for smartfones

--- a/index.html
+++ b/index.html
@@ -61,15 +61,13 @@
 		</div>
 		<div class="container">
 			<div class="row">
-				<div class="col-6">
-					<div class="myphoto">
-						<img src="img/port-foto.png" alt="">
-					</div>
+				<div class="col-4">
 					<div class="about-me">
+						<h3>Who I am</h3>
 						<p>Hello World! I am live in Kiev/Ukraine. I can build responsive and cross-browser websites. I mostly do front-end development (HTML5, CSS3, Javascript) but, also I can do some backend work (php, MySQL).It is very interesting learning new web-technologies and use them in my work. If you want to work with me or just say "hey Evhenii, what's up?" for no reason what so ever, contact me.</p>
 					</div>
 				</div>
-				<div class="col-6">
+				<div class="col-4">
 					<div class="skills">
 						<p class="select-style">.skills</p>
 						<div class="items">
@@ -82,6 +80,10 @@
 							<p class="item-name">Photoshop<span class="item-value mat">50%</span></p>
 							<p class="item-name">knowledge<span class="item-value">git, gulp</span></p>
 						</div>
+					</div>
+				</div>
+				<div class="col-4">
+					<div class="skills">
 						<p class="select-style">.languages</p>
 						<div class="items">
 							<p class="item-name">english<span class="item-value">medium</span></p>
@@ -109,7 +111,7 @@
 				</div>
 				<div class="col-4">
 					<div class="site">
-						<a href="#"  class="tagstyle empty">place for my work</a>
+						<a href="http://ex-android.ru"><img src="img/site-2.jpg" alt=""></a>
 					</div>
 				</div>
 				<div class="col-4">
@@ -118,7 +120,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="row sites">
+			<div class="row sites second-row">
 				<div class="col-4">
 					<div class="site">
 						<a href="#" class="tagstyle empty">place for my work</a>
@@ -146,7 +148,12 @@
 		</div>
 		<div class="container">
 			<div class="row">
-				<div class="col-4">
+				<div class="col-6">
+					<div class="myphoto">
+						<img src="img/port-foto.png" alt="">
+					</div>
+				</div>
+				<div class="col-6">
 					<div class="contacts-title">
 						<h2>Want to work with me?</h2>
 					</div>
