--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta charset="UTF-8">
 	<title> My Portfolio </title>
+
 	<!--SEO-->
 	<meta name="keywords" content="" />
 	<meta name="description" content="" />
 	<meta name="author" content="Evhenii Holodniak">
 	<!--adaptive-->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<!--ico-->
+	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 	<!--CSS-->
 	<link rel="stylesheet" href="css/mynormalize.css">
 	<link rel="stylesheet" href="css/main.css">
