fix english errors

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 				<div class="col-4">
 					<div class="about-me">
 						<h3>Who I am</h3>
-						<p>Hello World! I am live in Kiev/Ukraine. I can build responsive and cross-browser websites. I mostly do front-end development (HTML5, CSS3, Javascript) but, also I can do some backend work (php, MySQL).It is very interesting learning new web-technologies and use them in my work. If you want to work with me or just say "hey Evhenii, what's up?" for no reason what so ever, contact me.</p>
+						<p>Hello World! I live in Kiev/Ukraine. I can build responsive and cross-browser websites. I mostly do front-end development (HTML5, CSS3, Javascript) but, also I can do some backend work (php, MySQL).It is very interesting to learn new web-technologies and use them in my work. If you want to work with me or just say "hey Evhenii, what's up?" for no reason what so ever, contact me.</p>
 					</div>
 				</div>
 				<div class="col-4">
