--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta charset="UTF-8">
-	<title> My Portfolio </title>
+	<title> Evhenii Holodniak </title>
 
 	<!--SEO-->
 	<meta name="keywords" content="" />
@@ -28,7 +28,7 @@
 			<div class="row">
 				<div class="col-3">
 					<div class="logo">
-						<h1 class="tagstyle">E.H</h1>
+						<h1 class="tagstyle">E</h1>
 					</div>
 				</div>
 				<div class="col-9">
@@ -74,13 +74,12 @@
 					<div class="skills">
 						<p class="select-style">.skills</p>
 						<div class="items">
-							<p class="item-name">html/html5<span class="item-value mat">95%</span></p>
-							<p class="item-name">css/css3 + sass<span class="item-value mat">95%</span>
+							<p class="item-name">html/html5<span class="item-value mat">85%</span></p>
+							<p class="item-name">css/css3 + sass<span class="item-value mat">85%</span>
 							</p>
-							<p class="item-name">JavaScript + JQuery<span class="item-value mat">30%</span></p>
-
+							<p class="item-name">JavaScript + JQuery<span class="item-value mat">50%</span></p>
+							<p class="item-name">Bootstrap<span class="item-value mat">75%</span></p>
 							<p class="item-name">CMS<span class="item-value">WordPress</span></p>
-							<p class="item-name">Photoshop<span class="item-value mat">50%</span></p>
 							<p class="item-name">knowledge<span class="item-value">git, gulp</span></p>
 						</div>
 					</div>
@@ -100,48 +99,47 @@
 	</div>
 	<!--PORTFOLIO-->
 	<div class="portfolio" id="portfolio">
-			<div class="section-title">
-				<div class="container">
-					<h2 class="tagstyle">portfolio</h2>
-				</div>
+		<div class="section-title">
+			<div class="container">
+				<h2 class="tagstyle">portfolio</h2>
 			</div>
+		</div>
 		<div class="container">
 			<div class="row sites">
 				<div class="col-4">
 					<div class="site">
-						<a href="/sites/dropp/index.html"><img src="img/site-1.jpg"  alt=""></a>
+						<a href="/sites/dropp/index.html">
+							<img src="img/dropp.jpg" alt="">
+							<div class="image-hover">
+								<h3 class="tagstyle">Dropp</h3>
+							</div>
+						</a>
 					</div>
 				</div>
 				<div class="col-4">
 					<div class="site">
-						<a href="http://ex-android.ru"><img src="img/site-2.jpg" alt=""></a>
+						<a href="http://ex-android.ru">
+							<img src="img/ex-android.jpg" alt="">
+							<div class="image-hover">
+								<h3 class="tagstyle">Ex-android.ru</h3>
+							</div>
+						</a>
 					</div>
 				</div>
 				<div class="col-4">
 					<div class="site">
-						<a href="#"  class="tagstyle empty">place for my work</a>
-					</div>
-				</div>
-			</div>
-			<div class="row sites second-row">
-				<div class="col-4">
-					<div class="site">
-						<a href="#" class="tagstyle empty">place for my work</a>
-					</div>
-				</div>
-				<div class="col-4">
-					<div class="site">
-						<a href="#"  class="tagstyle empty">place for my work</a>
-					</div>
-				</div>
-				<div class="col-4">
-					<div class="site">
-						<a href="#"  class="tagstyle empty">place for my work</a>
+						<a href="http://holod-e.github.io/">
+							<img src="img/portfolio.jpg" alt="">
+							<div class="image-hover">
+								<h3 class="tagstyle">my Portfolio site</h3>
+							</div>
+						</a>
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
+
 	<!--CONTATCS-->
 	<div class="contacts" id="contacts">
 		<div class="section-title">
@@ -161,9 +159,15 @@
 						<h2>Want to work with me?</h2>
 					</div>
 					<div class="contacts-section">
-						<div class="email social social-email"><p>holodniak.e@gmail.com</p></div>
-						<div class="phone social social-phone"><p>+380934685467</p></div>
-						<div class="skype"><p>holodniak.e</p></div>
+						<div class="email social social-email">
+							<p>holodniak.e@gmail.com</p>
+						</div>
+						<div class="phone social social-phone">
+							<p>+380934685467</p>
+						</div>
+						<div class="skype">
+							<p>holodniak.e</p>
+						</div>
 					</div>
 				</div>
 			</div>
