--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
 					<div class="skills">
 						<p class="select-style">.languages</p>
 						<div class="items">
-							<p class="item-name">english<span class="item-value">medium</span></p>
+							<p class="item-name">english<span class="item-value">intermediate</span></p>
 							<p class="item-name">ukrainian<span class="item-value">native</span></p>
-							<p class="item-name">russian<span class="item-value">free</span></p>
+							<p class="item-name">russian<span class="item-value">fluent</span></p>
 						</div>
 					</div>
 				</div>
@@ -173,6 +173,10 @@
 			</div>
 		</div>
 	</div>
+	<!--FOOTER-->
+	<footer>
+		<p class="author-info"><span>&copy;</span> 2015 Evhenii Holodniak</p>
+	</footer>
 	</div>
 </body>
 </html>
