--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 <body>
 	<!---HEADER-->
-	<div class="wrapper">
+<div class="wrapper">
 	<div class="header">
 		<div class="container">
 			<div class="row">
@@ -34,14 +34,15 @@
 				<div class="col-10">
 					<ul class="navigation">
 						<li><a class="tagstyle" href="#home">home</a></li>
-						<li><a class="tagstyle" href="#about">about me</a></li>
+						<li><a class="tagstyle" href="#info">info</a></li>
 						<li><a class="tagstyle" href="#portfolio">portfolio</a></li>
-						<li><a class="tagstyle" href="#contacts">contacts</a></li>
+						<li><a class="tagstyle" href="#about">about</a></li>
 					</ul>
 				</div>
 			</div>
 		</div>
 	</div>
+
 	<!---HOME-->
 	<div class="home" id="home">
 		<div class="container">
@@ -55,19 +56,25 @@
 			</div>
 		</div>
 	</div>
-	<!--ABOUT-->
-	<div class="about" id="about">
+
+	<!--info-->
+	<div class="info" id="info">
 		<div class="section-title">
 			<div class="container">
-				<h2 class="tagstyle" >about me</h2>
+				<h2 class="tagstyle" >info</h2>
 			</div>
 		</div>
 		<div class="container">
 			<div class="row">
 				<div class="col-4">
-					<div class="about-me">
-						<h3>Who I am</h3>
-						<p>Hello World! I live in Kiev/Ukraine. I can build responsive and cross-browser websites. I mostly do front-end development (HTML5, CSS3, Javascript) but, also I can do some backend work (php, MySQL).It is very interesting to learn new web-technologies and use them in my work. If you want to work with me or just say "hey Evhenii, what's up?" for no reason what so ever, contact me.</p>
+					<div class="skills">
+						<p class="select-style">.contacts</p>
+						<div class="items">
+							<p class="item-name">email<span class="item-value mat">holodniak.e@gmail.com</span></p>
+							<p class="item-name">skype<span class="item-value mat">holodniak.e</span>
+							</p>
+							<p class="item-name">phone<span class="item-value mat">+380934685467</span></p>
+						</div>
 					</div>
 				</div>
 				<div class="col-4">
@@ -79,8 +86,8 @@
 							</p>
 							<p class="item-name">JavaScript + JQuery<span class="item-value mat">50%</span></p>
 							<p class="item-name">Bootstrap<span class="item-value mat">75%</span></p>
-							<p class="item-name">CMS<span class="item-value">WordPress</span></p>
-							<p class="item-name">knowledge<span class="item-value">git, gulp</span></p>
+							<p class="item-name">CMS<span class="item-value mat">WordPress</span></p>
+							<p class="item-name">knowledge<span class="item-value mat">git, gulp</span></p>
 						</div>
 					</div>
 				</div>
@@ -88,15 +95,16 @@
 					<div class="skills">
 						<p class="select-style">.languages</p>
 						<div class="items">
-							<p class="item-name">english<span class="item-value">intermediate</span></p>
-							<p class="item-name">ukrainian<span class="item-value">native</span></p>
-							<p class="item-name">russian<span class="item-value">fluent</span></p>
+							<p class="item-name">english<span class="item-value mat">intermediate</span></p>
+							<p class="item-name">ukrainian<span class="item-value mat">native</span></p>
+							<p class="item-name">russian<span class="item-value mat">fluent</span></p>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
+
 	<!--PORTFOLIO-->
 	<div class="portfolio" id="portfolio">
 		<div class="section-title">
@@ -141,10 +149,10 @@
 	</div>
 
 	<!--CONTATCS-->
-	<div class="contacts" id="contacts">
+	<div class="about" id="about">
 		<div class="section-title">
 			<div class="container">
-				<h2 class="tagstyle">contacts</h2>
+				<h2 class="tagstyle">about</h2>
 			</div>
 		</div>
 		<div class="container">
@@ -155,28 +163,19 @@
 					</div>
 				</div>
 				<div class="col-6">
-					<div class="contacts-title">
-						<h2>Want to work with me?</h2>
-					</div>
-					<div class="contacts-section">
-						<div class="email social social-email">
-							<p>holodniak.e@gmail.com</p>
-						</div>
-						<div class="phone social social-phone">
-							<p>+380934685467</p>
-						</div>
-						<div class="skype">
-							<p>holodniak.e</p>
-						</div>
+					<div class="about-me">
+						<h3>Who I am</h3>
+						<p>Hello World! I live in Kiev/Ukraine. I can build responsive and cross-browser websites. I mostly do front-end development (HTML5, CSS3, Javascript) but, also I can do some backend work (php, MySQL).It is very interesting to learn new web-technologies and use them in my work. If you want to work with me or just say "hey Evhenii, what's up?" for no reason what so ever, contact me.</p>
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
+
 	<!--FOOTER-->
 	<footer>
 		<p class="author-info"><span>&copy;</span> 2015 Evhenii Holodniak</p>
 	</footer>
-	</div>
+</div>
 </body>
 </html>
