added new site to portfolio golden

--- a/index.html
+++ b/index.html
@@ -126,10 +126,10 @@
 				</div>
 				<div class="col-4">
 					<div class="site">
-						<a href="http://ex-android.ru">
-							<img src="img/ex-android.jpg" alt="">
+						<a href="/sites/golden/index.html">
+							<img src="img/golden.jpg" alt="">
 							<div class="image-hover">
-								<h3 class="tagstyle">Ex-android.ru</h3>
+								<h3 class="tagstyle">Golden</h3>
 							</div>
 						</a>
 					</div>
