added portal site in portfolio

--- a/index.html
+++ b/index.html
@@ -145,6 +145,39 @@
 					</div>
 				</div>
 			</div>
+
+			<div class="row sites">
+				<div class="col-4">
+					<div class="site">
+						<a href="/sites/portal/index.html">
+							<img src="img/portal.jpg" alt="">
+							<div class="image-hover">
+								<h3 class="tagstyle">Portal</h3>
+							</div>
+						</a>
+					</div>
+				</div>
+				<div class="col-4">
+					<div class="site">
+						<a href="http://ex-android.ru">
+							<img src="img/ex-android.jpg" alt="">
+							<div class="image-hover">
+								<h3 class="tagstyle">ex-android.ru</h3>
+							</div>
+						</a>
+					</div>
+				</div>
+				<div class="col-4">
+					<div class="site">
+						<a href="#">
+							<img src="img/in-progress.jpg" alt="">
+							<div class="image-hover">
+								<h3 class="tagstyle">In progress</h3>
+							</div>
+						</a>
+					</div>
+				</div>
+			</div>
 		</div>
 	</div>
 
