change name of site in work

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 						<a href="#">
 							<img src="img/in-progress.jpg" alt="">
 							<div class="image-hover">
-								<h3 class="tagstyle">In progress</h3>
+								<h3 class="tagstyle">Site in work</h3>
 							</div>
 						</a>
 					</div>
