--- a/index.html
+++ b/index.html
@@ -214,6 +214,9 @@
 		<p class="author-info"><span>&copy;</span> 2015 Evhenii Holodniak</p>
 	</footer>
 
+	<div class="loader">
+		<div class="loader_inner"></div>
+	</div>
 	<!--[if lt IE 9]>
 	<script src="libs/html5shiv/es5-shim.min.js"></script>
 	<script src="libs/html5shiv/html5shiv.min.js"></script>
