some changes in skills

--- a/index.html
+++ b/index.html
@@ -85,13 +85,11 @@
 					<div class="skills">
 						<p class="select-style">.skills</p>
 						<div class="items">
-							<p class="item-name">html/html5<span class="item-value mat">85%</span></p>
+							<p class="item-name">html/html5 + Bootstrap<span class="item-value mat">85%</span></p>
 							<p class="item-name">css/css3 + sass<span class="item-value mat">85%</span>
 							</p>
 							<p class="item-name">JavaScript + JQuery<span class="item-value mat">50%</span></p>
-							<p class="item-name">Bootstrap<span class="item-value mat">75%</span></p>
-							<p class="item-name">CMS<span class="item-value mat">WordPress</span></p>
-							<p class="item-name">knowledge<span class="item-value mat">git, gulp</span></p>
+							<p class="item-name">DevTools<span class="item-value mat">git, gulp, npm, bower</span></p>
 						</div>
 					</div>
 				</div>
@@ -196,7 +194,7 @@
 						</a>
 					</div>
 				</div>
-				
+
 				<!-- =====SIX-SITE===== -->
 				
 			</div>
