added social icons

--- a/index.html
+++ b/index.html
@@ -228,6 +228,11 @@
 	<!--FOOTER-->
 	<footer>
 		<p class="author-info"><span>&copy;</span> 2015 Evhenii Holodniak</p>
+		<div class="social-icons">
+			<a href="http://vk.com/holodniak_e" class="social vk"></a>
+			<a href="https://www.facebook.com/holodniak.e" class="social fb"></a>
+			<a href="https://github.com/Holod-e" class="social gh"></a>
+		</div>
 	</footer>
 
 	<div class="loader">
