added bootstrap grid system

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 	<!--ico-->
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 	<!--CSS-->
+	<link rel="stylesheet" href="libs/bootstrap/bootstrap-grid-3.3.1.min.css">
 	<link rel="stylesheet" href="css/mynormalize.css">
 	<link rel="stylesheet" href="css/main.css">
 	<!--JS-->
@@ -30,12 +31,12 @@
 	<div class="header">
 		<div class="container">
 			<div class="row">
-				<div class="col-2">
+				<div class="col-md-2">
 					<div class="logo">
 						<h1 class="tagstyle">E</h1>
 					</div>
 				</div>
-				<div class="col-10">
+				<div class="col-md-10">
 					<ul class="navigation">
 						<li><a class="tagstyle" href="#home">home</a></li>
 						<li><a class="tagstyle" href="#info">info</a></li>
@@ -51,7 +52,7 @@
 	<div class="home" id="home">
 		<div class="container">
 			<div class="row">
-				<div class="col-12 clearfix">
+				<div class="col-md-12 clearfix">
 					<div class="home-title">
 						<p>Hello, I'm <span>Evhenii Holodniak</span></p>
 						<h3 class="tagstyle">a front-end developer</h3>
@@ -65,12 +66,12 @@
 	<div class="info" id="info">
 		<div class="section-title">
 			<div class="container">
-				<h2 class="tagstyle" >info</h2>
+				<h2 class="tagstyle">info</h2>
 			</div>
 		</div>
 		<div class="container">
 			<div class="row">
-				<div class="col-4">
+				<div class="col-md-4">
 					<div class="skills">
 						<p class="select-style">.contacts</p>
 						<div class="items">
@@ -81,7 +82,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-4">
+				<div class="col-md-4">
 					<div class="skills">
 						<p class="select-style">.skills</p>
 						<div class="items">
@@ -93,7 +94,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-4">
+				<div class="col-md-4">
 					<div class="skills">
 						<p class="select-style">.languages</p>
 						<div class="items">
@@ -110,14 +111,14 @@
 	<!--PORTFOLIO-->
 	<div class="portfolio" id="portfolio">
 		<div class="section-title">
-			<div class="container">
+			<div class="container-fluid">
 				<h2 class="tagstyle">portfolio</h2>
 			</div>
 		</div>
 		<div class="container">
-			<div class="row sites">
+			<div class="row">
 				<!-- =====FIRST-SITE===== -->
-				<div class="col-4">
+				<div class="col-sm-4 ">
 					<div class="site">
 						<a href="/sites/tockit/index.html">
 							<img src="img/tockit.jpg" alt="">
@@ -130,7 +131,7 @@
 
 				<!-- =====SECOND-SITE===== -->
 
-				<div class="col-4">
+				<div class="col-sm-4 ">
 					<div class="site">
 						<a href="http://holod-e.github.io/">
 							<img src="img/portfolio.jpg" alt="">
@@ -143,7 +144,7 @@
 		
 				<!-- =====THIRD-SITE===== -->
 
-				<div class="col-4">
+				<div class="col-sm-4 ">
 					<div class="site">
 						<a href="/sites/dropp/index.html">
 							<img src="img/dropp.jpg" alt="">
@@ -156,11 +157,11 @@
 
 			</div>
 					
-			<div class="row sites">
+			<div class="row">
 
 			<!-- =====FOURTH-SITE===== -->
 
-				<div class="col-4">
+				<div class="col-sm-4 ">
 					<div class="site">
 						<a href="/sites/portal/index.html">
 							<img src="img/portal.jpg" alt="">
@@ -170,8 +171,8 @@
 						</a>
 					</div>
 				</div>
-
-				<div class="col-4">
+				<!-- =====FIVE-SITE===== -->
+				<div class="col-sm-4 ">
 					<div class="site">
 						<a href="/sites/golden/index.html">
 							<img src="img/golden.jpg" alt="">
@@ -182,9 +183,9 @@
 					</div>
 				</div>
 
-				<!-- =====FIVE-SITE===== -->
+				<!-- =====SIX-SITE===== -->
 
-				<div class="col-4">
+				<div class="col-sm-4">
 					<div class="site">
 						<a href="http://ex-android.ru">
 							<img src="img/ex-android.jpg" alt="">
@@ -194,8 +195,6 @@
 						</a>
 					</div>
 				</div>
-
-				<!-- =====SIX-SITE===== -->
 				
 			</div>
 		</div>
@@ -210,12 +209,12 @@
 		</div>
 		<div class="container">
 			<div class="row">
-				<div class="col-6">
+				<div class="col-md-6">
 					<div class="myphoto">
 						<img src="img/port-foto.png" alt="">
 					</div>
 				</div>
-				<div class="col-6">
+				<div class="col-md-6">
 					<div class="about-me">
 						<h3>Who I am</h3>
 						<p>Hello World! I live in Kiev/Ukraine. I can build responsive and cross-browser websites. I mostly do front-end development (HTML5, CSS3, Javascript) but, also I can do some backend work (php, MySQL).It is very interesting to learn new web-technologies and use them in my work. If you want to work with me or just say "hey Evhenii, what's up?" for no reason what so ever, contact me.</p>
