--- a/sites/activebox/index.html
+++ b/sites/activebox/index.html
@@ -17,7 +17,7 @@
 	<link rel="apple-touch-icon" sizes="72x72" href="img/favicon/apple-touch-icon-72x72.png">
 	<link rel="apple-touch-icon" sizes="114x114" href="img/favicon/apple-touch-icon-114x114.png">
 	<!-- google fonts -->
-	<link href='https://fonts.googleapis.com/css?family=Raleway:400,700|Open+Sans:400,700' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Raleway:400,700|Open+Sans:400,700' rel='stylesheet'>
 	<link rel="stylesheet" href="css/libs.min.css">
 
 	<link rel="stylesheet" href="css/main.min.css">
@@ -241,7 +241,7 @@
 		<div class="container-fluid">
 			<div id="owl-slider">
 				<!-- slide-1 -->
-				<div class="item" id="slide1">
+				<div class="item">
 					<img src="img/slide1.jpg" alt="slide1">
 					<div class="slide-info">
 						<p>“Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec sed odio dui. Aenean eu leo quam...”</p>
@@ -256,7 +256,7 @@
 					</div>
 				</div>
 				<!-- slide-2 -->
-				<div class="item" id="slide2">
+				<div class="item">
 					<img src="img/slide2.jpg" alt="slide2">
 					<div class="slide-info">
 						<p>“Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec sed odio dui. Aenean eu leo quam...”</p>
@@ -271,7 +271,7 @@
 					</div>
 				</div>
 				<!-- slide-3 -->
-				<div class="item" id="slide3">
+				<div class="item">
 					<img src="img/slide3.jpg" alt="slide3">
 					<div class="slide-info">
 						<p>“Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec sed odio dui. Aenean eu leo quam...”</p>
@@ -286,7 +286,7 @@
 					</div>
 				</div>
 				<!-- slide-4 -->
-				<div class="item" id="slide3">
+				<div class="item">
 					<img src="img/slide4.jpg" alt="slide4">
 					<div class="slide-info">
 						<p>“Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec sed odio dui. Aenean eu leo quam...”</p>
@@ -301,7 +301,7 @@
 					</div>
 				</div>
 				<!-- slide-5 -->
-				<div class="item" id="slide5">
+				<div class="item">
 					<img src="img/slide5.jpg" alt="slide5">
 					<div class="slide-info">
 						<p>“Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec sed odio dui. Aenean eu leo quam...”</p>
