--- a/sites/mk/index.html
+++ b/sites/mk/index.html
@@ -46,17 +46,16 @@
 <!---------- SECTION 1 ---------->
 <section class="sec1">
 	<div class="container">
+		<button id="gen">Generate</button>
 		<div class="row">
 			<div class="col-md-6 col-sm-6">
 				<div class="fighters">
-					<button id="genBtn1">Generate</button>
 					<ul id="fighters1">
 					</ul>
 				</div>
 			</div>
 			<div class="col-md-6 col-sm-6">
 				<div class="fighters">
-					<button id="genBtn2">Generate</button>
 					<ul id="fighters2">
 					</ul>
 				</div>
