add 4 img avatar

--- a/mk/index.html
+++ b/mk/index.html
@@ -15,7 +15,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 
 	<!--раскоментить viewport при адаптивном дизайне-->
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+	<!-- <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"> -->
 	<!--сюда подключаем все сторонние библиотечные стили-->
 	<!-- build:css css/libs.min.css -->
 	<link rel="stylesheet" href="css/animate.css">
@@ -74,6 +74,6 @@
 	<!-- build:js js/common.min.js -->
 	<!-- <script src="js/common.js"></script> -->
 		<!-- endbuild -->
-	
+
 </body>
 </html>
